--- a/structured_code.ipynb
+++ b/structured_code.ipynb
@@ -2,6 +2,172 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1cda160c-0af0-4739-82fe-8f62dd660ace",
+   "metadata": {},
+   "source": [
+    "# Debugging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6632fc29-92ce-4411-8e77-48f32304624a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import APIRouter, UploadFile, File\n",
+    "import asyncio\n",
+    "import io\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from app.backend.utlis.ocr import pan_ocr, adhar_ocr\n",
+    "from app.backend.utlis.face import extract_face, enhance_image, match_faces_with_facenet\n",
+    "from app.backend.utlis.logging_config import get_logger  # Import the global logger\n",
+    "from typing import Optional, Dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5f0ed176-7fe3-4348-bad7-75bbaed81386",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger = get_logger(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "82d71e40-c0a2-4905-bcbb-1cfa2c513952",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_image(image_data: bytes) -> Optional[np.ndarray]:\n",
+    "    logger.info(f\"Received image data, length: {len(image_data)} bytes\")\n",
+    "    if not image_data:\n",
+    "        logger.error(\"Image data is empty or unreadable\")\n",
+    "        return None\n",
+    "    try:\n",
+    "        image = Image.open(io.BytesIO(image_data))\n",
+    "        cv2_img = cv2.cvtColor(np.array(image), cv2.COLOR_RGB2BGR)\n",
+    "        logger.info(f\"Image read successfully with shape {cv2_img.shape}\")\n",
+    "        return cv2_img\n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"Error decoding image data: {e}\")\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "37f83fb0-b15f-49df-b4ec-33fd2342daee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_documents() -> Dict[str, dict]:\n",
+    "    logger.info(\"Processing documents started\")\n",
+    "    try:\n",
+    "        with open(\"pan.jpg\", \"rb\") as image_file:\n",
+    "            pan_image_data = image_file.read()\n",
+    "        with open(\"live.jpg\", \"rb\") as image_file:\n",
+    "            live_image_data = image_file.read()\n",
+    "        with open(\"adhar_front.jpg\", \"rb\") as image_file:\n",
+    "            adhar_image_data = image_file.read()\n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"Error reading images: {e}\")\n",
+    "        return {\"error\": \"Failed to read images\"}\n",
+    "    try:\n",
+    "        pan_img = read_image(pan_image_data)\n",
+    "        adhar_img = read_image(adhar_image_data)\n",
+    "        live_img = read_image(live_image_data)\n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"Error reading image data: {e}\")\n",
+    "        return {\"error\": \"Error processing image data\"}\n",
+    "    extracted_face = extract_face(live_img)\n",
+    "    if extracted_face is None:\n",
+    "        logger.warning(\"No face detected in live image\")\n",
+    "        return {\"error\": \"No face detected in live image\"}\n",
+    "    logger.info(\"Face successfully extracted from live image\")\n",
+    "    try:\n",
+    "        pan_text= pan_ocr(image=pan_img)\n",
+    "        adhar_text=adhar_ocr(image=adhar_img)\n",
+    "        logger.info(\"OCR completed successfully\")\n",
+    "    except Exception as e:\n",
+    "        logger.error(f\"OCR processing error: {e}\")\n",
+    "        return {\"error\": \"Failed to perform OCR\"}\n",
+    "    adhar_face=extract_face(adhar_img)\n",
+    "    pan_face =extract_face(pan_img)\n",
+    "    if adhar_face is not None:\n",
+    "        logger.info(\"Face extracted from Aadhar image\")\n",
+    "    else:\n",
+    "        logger.warning(\"No face detected in Aadhar image\")\n",
+    "    if pan_face is not None:\n",
+    "        logger.info(\"Face extracted from PAN image\")\n",
+    "    else:\n",
+    "        logger.warning(\"No face detected in PAN image\")\n",
+    "    match_adhar, score_adhar = match_faces_with_facenet(extracted_face, adhar_face) if adhar_face is not None else (False, None)\n",
+    "    match_pan, score_pan = match_faces_with_facenet(extracted_face, pan_face) if pan_face is not None else (False, None)\n",
+    "    logger.info(f\"Face match results - Aadhar: {match_adhar}, Score: {score_adhar}\")\n",
+    "    logger.info(f\"Face match results - PAN: {match_pan}, Score: {score_pan}\")\n",
+    "    return {\n",
+    "        \"pan_ocr\": pan_text,\n",
+    "        \"adhar_ocr\": adhar_text,\n",
+    "        \"face_match_with_adhar\": {\"match\": match_adhar, \"score\": score_adhar},\n",
+    "        \"face_match_with_pan\": {\"match\": match_pan, \"score\": score_pan},\n",
+    "        \"extracted_pan_face\" : pan_face,\n",
+    "        \"extracted_adhar_face\" : adhar_face,\n",
+    "        \"pan_img\" : pan_img,\n",
+    "        \"adhar_img\" : adhar_img,\n",
+    "        \"live_img\" : live_img,\n",
+    "        \"extracted_live_face\" : extracted_face,\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ff4ca6fb-fe58-4f3d-8d4f-a29be2761096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"pan.jpg\", \"rb\") as image_file:\n",
+    "    pan_image_data = image_file.read()\n",
+    "\n",
+    "with open(\"live.jpg\", \"rb\") as image_file:\n",
+    "    live_image_data = image_file.read()\n",
+    "\n",
+    "with open(\"adhar_front.jpg\", \"rb\") as image_file:\n",
+    "    adhar_image_data = image_file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38e15f3b-af35-4dd4-9aed-9778d67f0d05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result=process_documents()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a047ce16-5c7c-48c6-a77f-9786ae4cc530",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "arr_rgb = cv2.cvtColor(result['extracted_live_face'], cv2.COLOR_BGR2RGB)\n",
+    "image = Image.fromarray(arr_rgb)\n",
+    "image.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5443ea88-42c1-40bd-892d-11976a3e155c",
    "metadata": {},
    "source": [
@@ -10,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 83,
    "id": "180a58f3-b30b-44cb-b69c-1d0d0eacd8f4",
    "metadata": {},
    "outputs": [],
@@ -80,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 89,
    "id": "4d270e53-1d2e-4698-a79a-ab0aaad70476",
    "metadata": {},
    "outputs": [
@@ -88,13 +254,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Face saved at: cropped_faces/face_adhar_front.jpg with padding 35.0%\n",
+      "✅ Face saved at: cropped_faces/face_live.jpg with padding 35.0%\n",
       "Face extraction successful: True\n"
      ]
     }
    ],
    "source": [
-    "success = extract_and_save_face(\"adhar_front.jpg\")\n",
+    "success = extract_and_save_face(\"live.jpg\")\n",
     "print(f\"Face extraction successful: {success}\")"
    ]
   },
@@ -108,65 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 91,
    "id": "6e479ebd-2d73-45b5-9e2b-08835e8cbe69",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-04 17:00:11,208 - WARNING - From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n",
-      "2025-02-04 17:00:12,854 - INFO - Using C:\\Users\\sanje\\AppData\\Local\\Temp\\tfhub_modules to cache modules.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tensorflow_hub\\resolver.py:120: The name tf.gfile.MakeDirs is deprecated. Please use tf.io.gfile.makedirs instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-04 17:00:13,014 - WARNING - From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tensorflow_hub\\resolver.py:120: The name tf.gfile.MakeDirs is deprecated. Please use tf.io.gfile.makedirs instead.\n",
-      "\n",
-      "2025-02-04 17:00:13,026 - INFO - Downloading TF-Hub Module 'https://tfhub.dev/captain-pool/esrgan-tf2/1'.\n",
-      "2025-02-04 17:00:19,144 - INFO - Downloaded https://tfhub.dev/captain-pool/esrgan-tf2/1, Total size: 20.60MB\n",
-      "2025-02-04 17:00:19,148 - INFO - Downloaded TF-Hub Module 'https://tfhub.dev/captain-pool/esrgan-tf2/1'.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tensorflow_hub\\module_v2.py:126: The name tf.saved_model.load_v2 is deprecated. Please use tf.compat.v2.saved_model.load instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-04 17:00:19,253 - WARNING - From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tensorflow_hub\\module_v2.py:126: The name tf.saved_model.load_v2 is deprecated. Please use tf.compat.v2.saved_model.load instead.\n",
-      "\n",
-      "2025-02-04 17:00:25,471 - INFO - Fingerprint not found. Saved model loading will continue.\n",
-      "2025-02-04 17:00:25,472 - INFO - path_and_singleprint metric could not be logged. Saved model loading will continue.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -223,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 97,
    "id": "bca29124-689e-485e-ac70-41022d7035f1",
    "metadata": {},
    "outputs": [
@@ -231,13 +342,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Enhanced face saved at: enhanced_faces/enhanced_face_adhar_front.jpg\n",
+      "✅ Enhanced face saved at: enhanced_faces/enhanced_face_live.jpg\n",
       "Super-resolution enhancement successful: True\n"
      ]
     }
    ],
    "source": [
-    "success = enhance_image(\"cropped_faces/face_adhar_front.jpg\")\n",
+    "success = enhance_image(\"cropped_faces/face_live.jpg\")\n",
     "print(f\"Super-resolution enhancement successful: {success}\")"
    ]
   },
@@ -251,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 99,
    "id": "41bd687b-c57c-4eb1-89eb-f309b8785e2c",
    "metadata": {},
    "outputs": [],
@@ -316,48 +427,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 103,
    "id": "f9487666-6c5f-4c06-a598-dd47283e5c5c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-04 17:01:05,660 - INFO - Loading weights.\n",
-      "2025-02-04 17:01:05,662 - INFO - Looking for C:\\Users\\sanje/.keras-facenet\\20180402-114759\\20180402-114759-weights.h5\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\keras\\src\\backend\\tensorflow\\core.py:216: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-04 17:01:10,147 - WARNING - From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\keras\\src\\backend\\tensorflow\\core.py:216: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 4s/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 104ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 10s/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 197ms/step\n",
       "Do the faces match? True\n",
-      "Similarity Score (distance): 0.5981652736663818\n"
+      "Similarity Score (distance): 0.4152754545211792\n"
      ]
     }
    ],
    "source": [
     "# Example usage:\n",
-    "image1_path = \"enhanced_faces/enhanced_face_adhar_front.jpg\"\n",
+    "image1_path = \"enhanced_faces/enhanced_face_pan.jpg\"\n",
     "image2_path = \"enhanced_faces/enhanced_face_live.jpg\"\n",
     "\n",
     "faces_match, similarity_score = match_faces_with_facenet(image1_path, image2_path)\n",
@@ -384,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "id": "43f7634a-83b2-4e61-9324-37e20738117b",
    "metadata": {},
    "outputs": [],
@@ -551,8 +638,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "id": "2207be3f-7ffc-430b-874e-8704b133b539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:easyocr.easyocr:Neither CUDA nor MPS are available - defaulting to CPU. Note: This module is much faster with a GPU.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=extract_pan_details(image_path=\"pan.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6cb86fe-b3f8-4aca-bdfd-2ee90e21d3c3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0490eb2-37fb-435c-a9e3-e6439f65b85f",
    "metadata": {},
    "outputs": [],
    "source": []
