--- a/structured_code.ipynb
+++ b/structured_code.ipynb
@@ -12,10 +12,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6632fc29-92ce-4411-8e77-48f32304624a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\keras\\src\\backend\\tensorflow\\core.py:216: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tensorflow_hub\\resolver.py:120: The name tf.gfile.MakeDirs is deprecated. Please use tf.io.gfile.makedirs instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tensorflow_hub\\resolver.py:120: The name tf.gfile.MakeDirs is deprecated. Please use tf.io.gfile.makedirs instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tensorflow_hub\\module_v2.py:126: The name tf.saved_model.load_v2 is deprecated. Please use tf.compat.v2.saved_model.load instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\sanje\\anaconda3\\envs\\kyc\\Lib\\site-packages\\tensorflow_hub\\module_v2.py:126: The name tf.saved_model.load_v2 is deprecated. Please use tf.compat.v2.saved_model.load instead.\n",
+      "\n",
+      "WARNING:easyocr.easyocr:Neither CUDA nor MPS are available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "2025-02-10 18:32:15 - INFO - [models.py:19] - models are initialized\n",
+      "INFO:app.backend.utlis.models:models are initialized\n"
+     ]
+    }
+   ],
    "source": [
     "from fastapi import APIRouter, UploadFile, File\n",
     "import asyncio\n",
@@ -606,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "id": "43f7634a-83b2-4e61-9324-37e20738117b",
    "metadata": {},
    "outputs": [],
@@ -1452,6 +1492,199 @@
     "\n",
     "print(np.allclose(hist_a, hist_b, atol=1e-5))  # Should return True if only minor pixel shifts exist\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8e16e94-e627-40de-925e-1ccf3f9888cf",
+   "metadata": {},
+   "source": [
+    "# streamlit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "57d2367b-37e8-442d-be91-085fec74541d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import streamlit as st\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import tempfile\n",
+    "import os\n",
+    "\n",
+    "def main():\n",
+    "    st.title(\"KYC Webcam Capture\")\n",
+    "\n",
+    "    # Initialize session state for controlling webcam\n",
+    "    if \"webcam_active\" not in st.session_state:\n",
+    "        st.session_state.webcam_active = False\n",
+    "    if \"captured_image\" not in st.session_state:\n",
+    "        st.session_state.captured_image = None\n",
+    "\n",
+    "    # Button to open webcam\n",
+    "    if not st.session_state.webcam_active:\n",
+    "        if st.button(\"Take Picture\"):\n",
+    "            st.session_state.webcam_active = True\n",
+    "\n",
+    "    # If webcam is active, open webcam\n",
+    "    if st.session_state.webcam_active:\n",
+    "        # Start webcam using OpenCV\n",
+    "        cap = cv2.VideoCapture(0)  # 0 for default webcam\n",
+    "\n",
+    "        # Check if webcam is opened successfully\n",
+    "        if not cap.isOpened():\n",
+    "            st.error(\"Could not access webcam.\")\n",
+    "            st.session_state.webcam_active = False\n",
+    "            return\n",
+    "\n",
+    "        st.write(\"Press 'Capture Image' to take a snapshot.\")\n",
+    "\n",
+    "        # Placeholder for displaying the video feed\n",
+    "        frame_placeholder = st.empty()\n",
+    "        capture_button = st.button(\"Capture Image\")\n",
+    "\n",
+    "        while True:\n",
+    "            ret, frame = cap.read()\n",
+    "            if not ret:\n",
+    "                st.error(\"Failed to grab frame.\")\n",
+    "                break\n",
+    "\n",
+    "            # Convert OpenCV frame (BGR) to RGB\n",
+    "            frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "            # Display the live video feed\n",
+    "            frame_placeholder.image(frame_rgb, channels=\"RGB\")\n",
+    "\n",
+    "            # If \"Capture Image\" button is pressed, save the image\n",
+    "            if capture_button:\n",
+    "                st.session_state.captured_image = frame_rgb\n",
+    "                st.session_state.webcam_active = False\n",
+    "                break\n",
+    "\n",
+    "        cap.release()  # Release the webcam\n",
+    "\n",
+    "    # Display the captured image\n",
+    "    if st.session_state.captured_image is not None:\n",
+    "        st.subheader(\"Captured Image:\")\n",
+    "        st.image(st.session_state.captured_image, channels=\"RGB\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72b494a2-c031-4dbe-a5e4-f85cbf5060da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import streamlit as st\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import tempfile\n",
+    "import os\n",
+    "import requests\n",
+    "from io import BytesIO\n",
+    "\n",
+    "# API Endpoint (Replace with your actual API URL)\n",
+    "API_URL = \"http://localhost:8000/results/process_documents/\"\n",
+    "\n",
+    "def capture_webcam_image():\n",
+    "    \"\"\"Captures an image from the webcam and returns it as a NumPy array.\"\"\"\n",
+    "    cap = cv2.VideoCapture(0)  # 0 for default webcam\n",
+    "\n",
+    "    if not cap.isOpened():\n",
+    "        st.error(\"Could not access webcam.\")\n",
+    "        return None\n",
+    "\n",
+    "    st.write(\"Press 'Capture Image' when ready.\")\n",
+    "\n",
+    "    frame_placeholder = st.empty()\n",
+    "    capture_button = st.button(\"Capture Image\")\n",
+    "\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            st.error(\"Failed to grab frame.\")\n",
+    "            break\n",
+    "\n",
+    "        # Convert BGR (OpenCV format) to RGB\n",
+    "        frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "        frame_placeholder.image(frame_rgb, channels=\"RGB\")\n",
+    "\n",
+    "        if capture_button:\n",
+    "            cap.release()\n",
+    "            return frame_rgb  # Return captured image\n",
+    "\n",
+    "    cap.release()\n",
+    "    return None\n",
+    "\n",
+    "def convert_image_to_bytes(image):\n",
+    "    \"\"\"Converts an image (NumPy array) to byte data.\"\"\"\n",
+    "    _, buffer = cv2.imencode(\".jpg\", cv2.cvtColor(image, cv2.COLOR_RGB2BGR))\n",
+    "    return BytesIO(buffer.tobytes())\n",
+    "\n",
+    "def send_images_to_api(live_image, pan_image, adhar_image):\n",
+    "    \"\"\"Sends all three images to the API.\"\"\"\n",
+    "    files = {\n",
+    "        \"live_image\": (\"live.jpg\", live_image, \"image/jpeg\"),\n",
+    "        \"pan_image\": (\"pan.jpg\", pan_image, \"image/jpeg\"),\n",
+    "        \"adhar_image\": (\"adhar.jpg\", adhar_image, \"image/jpeg\"),\n",
+    "    }\n",
+    "\n",
+    "    response = requests.post(API_URL, files=files)\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        return response.json()\n",
+    "    else:\n",
+    "        return {\"error\": f\"API request failed with status code {response.status_code}\"}\n",
+    "\n",
+    "def main():\n",
+    "    st.title(\"KYC Verification System\")\n",
+    "\n",
+    "    # Capture Live Image\n",
+    "    st.subheader(\"Step 1: Capture Live Image\")\n",
+    "    if st.button(\"Take Picture\"):\n",
+    "        st.session_state.live_image = capture_webcam_image()\n",
+    "\n",
+    "    if \"live_image\" in st.session_state and st.session_state.live_image is not None:\n",
+    "        st.image(st.session_state.live_image, caption=\"Captured Live Image\", channels=\"RGB\")\n",
+    "\n",
+    "    # Upload Aadhaar and PAN Images\n",
+    "    st.subheader(\"Step 2: Upload Aadhaar & PAN Images\")\n",
+    "    uploaded_adhar = st.file_uploader(\"Upload Aadhaar Image\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
+    "    uploaded_pan = st.file_uploader(\"Upload PAN Image\", type=[\"jpg\", \"png\", \"jpeg\"])\n",
+    "\n",
+    "    # Submit to API\n",
+    "    if st.button(\"Submit KYC\") and \"live_image\" in st.session_state:\n",
+    "        if uploaded_adhar and uploaded_pan:\n",
+    "            # Convert live image to bytes\n",
+    "            live_image_bytes = convert_image_to_bytes(st.session_state.live_image)\n",
+    "\n",
+    "            # Read uploaded images as bytes\n",
+    "            adhar_bytes = uploaded_adhar.read()\n",
+    "            pan_bytes = uploaded_pan.read()\n",
+    "\n",
+    "            # Send to API\n",
+    "            response = send_images_to_api(live_image_bytes, pan_bytes, adhar_bytes)\n",
+    "\n",
+    "            # Display API Response\n",
+    "            st.subheader(\"API Response:\")\n",
+    "            st.json(response)\n",
+    "        else:\n",
+    "            st.error(\"Please upload Aadhaar and PAN images.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5087a821-0ee3-4ecf-97c5-8ac668d83a3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
